Fixed layout problems

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 nav { 
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 12;
   display: flex;
